Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2233

Check failure during compactions: pv_delete_redo != nullptr

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.4.0
    • 1.7.0
    • tablet, tserver
    • None

    Description

      There have been a couple of reports of a check failure during compactions at least from 1.4, pasted below:

      F1201 14:55:37.052140 10508 compaction.cc:756] Check failed: pv_delete_redo != nullptr
       * 
       ** 
       *** Check failure stack trace: ***
       Wrote minidump to /var/log/kudu/minidumps/kudu-tserver/215cde39-7795-0885-0b51038d-771d875e.dmp
       *** Aborted at 1512161737 (unix time) try "date -d @1512161737" if you are using GNU date ***
       PC: @ 0x3ec3632625 (unknown)
       *** SIGABRT (@0x3b98eec0000028e3) received by PID 10467 (TID 0x7f8b02c58700) from PID 10467; stack trace: ***
       @ 0x3ec3a0f7e0 (unknown)
       @ 0x3ec3632625 (unknown)
       @ 0x3ec3633e05 (unknown)
       @ 0x1b53f59 (unknown)
       @ 0x8b9f6d google::LogMessage::Fail()
       @ 0x8bbe2d google::LogMessage::SendToLog()
       @ 0x8b9aa9 google::LogMessage::Flush()
       @ 0x8bc8cf google::LogMessageFatal::~LogMessageFatal()
       @ 0x9db0fe kudu::tablet::FlushCompactionInput()
       @ 0x9a056a kudu::tablet::Tablet::DoMergeCompactionOrFlush()
       @ 0x9a372d kudu::tablet::Tablet::Compact()
       @ 0x9bd8d1 kudu::tablet::CompactRowSetsOp::Perform()
       @ 0x1b4145f kudu::MaintenanceManager::LaunchOp()
       @ 0x1b8da06 kudu::ThreadPool::DispatchThread()
       @ 0x1b888ea kudu::Thread::SuperviseThread()
       @ 0x3ec3a07aa1 (unknown)
       @ 0x3ec36e893d (unknown)
       @ 0x0 (unknown)}}
      

      Attachments

        Issue Links

          Activity

            People

              awong Andrew Wong
              awong Andrew Wong
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: