Add some DVLOG statements to help in debugging compaction issues

This adds some DVLOG statemenst that were crucial in debugging
KUDU-2233, particularly aroung merge compactions, clock advancement
and log gc.

Change-Id: I958045a75feceee19c09961de106bbacd343c739
Reviewed-on: http://gerrit.cloudera.org:8080/8886
Tested-by: Kudu Jenkins
Reviewed-by: Todd Lipcon <todd@apache.org>